# ergogauge

./: .gitignore  CHANGELOG.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CLAIM.md  NON-CLAIM.md  ROADMAP.md  architecture.d2
examples/: real_demo.py
results/: 0.1.0a1_metrics.json  0.1.0a2_metrics.json
scripts/: gen_metrics.py  heartbeat.py  verify_step.py
src/ergogauge/: __init__.py  api.py  baseline_vendi.py  calibrate.py  certificate.py  classify.py  cli.py  config.py  entropy.py  estimator.py  gate.py  io.py  spectral.py  synth.py  viz.py
tests/: conftest.py  test_api.py  test_core_torch_free.py  test_fail_closed.py  test_gates.py  test_honest_marketing.py  test_no_ci_less_api.py  test_pre_registered_eval.py  test_preregistration.py  test_synth_invariants.py  test_vendi_order_sensitivity.py
